fixed svg css display error on safari

--- a/src/css/_main.scss
+++ b/src/css/_main.scss
@@ -25,6 +25,7 @@
   align-items: center;
   svg {
     height: 1.2em;
+    width: 1.2em;
     margin-right: 0.3rem;
   }
 }
