--- a/src/css/components/_articleDetails.scss
+++ b/src/css/components/_articleDetails.scss
@@ -27,6 +27,8 @@
     }
     svg {
       stroke-width: 4px;
+      height: 1rem;
+      width: 1.3rem;
     }
     .link-text {
       margin-left: 0.8rem;
